2009-05-07  Alan McGovern  <amcgovern@novell.com>

	* ContentPresenter.cs: I seem to have mangled that last patch
	  before committing - fix the build.

2009-05-07  Alan McGovern  <amcgovern@novell.com>

	* ContentPresenter.cs: 1) The 'Content' property of the
	  ContentPresenter is not copied to DataContext.
	2) If the expanded DataTemplate is null, fall back to
	  displaying the Content.

2009-05-03  Chris Toshok  <toshok@ximian.com>

	* ContentControl.cs (WalkTreeForContentPresenters): not sure why
	we passed "this" to this method.  Just use this instead of
	templateRoot.  Also, use a more verbose TemplateBindingExpression
	initialization.

2009-05-01  Alan McGovern  <amcgovern@novell.com>

	* ContentControl.cs: If the default ContentPresenter is
	  replaced in a ContentControl, we need to TemplateBind both
	  the Content and ContentTemplate.

2009-04-28  Alan McGovern  <amcgovern@novell.com>

	* ItemsControl.cs: Ensure that PrepareContainerForItemOverride
	  is handling both ContentControls and ContentPresenters
	  correctly.

2009-04-28  Alan McGovern  <amcgovern@novell.com>

	* ComboBox.cs: Copy over the styles/templates to the items
	  from the ComboBox.
	Clicking the ToggleButton should open the dropdown.
	When a ComboBoxItem is autogenerated, we need to store the
	  autogenerated box in DisplayedItem so that we can put its
	  content back later on.

	* ItemsControl.cs: Generate the container only when it's
	  required. When the container is a ContentControl, ensure
	  that the container doesn't try to set the items logical
	  parent.

2009-04-28  Alan McGovern  <amcgovern@novell.com>

	* ComboBoxItem.cs: MouseUp should result in the popup being
	  closed but the selection is not changed.

2009-04-28  Alan McGovern  <amcgovern@novell.com>

	* ContentControl.cs: Add the ability to stop ContentControl
	  from automatically setting the LogicalParent when a
	  FrameworkElement is added as the Content.

2009-04-24  Alan McGovern  <amcgovern@novell.com>
