@@ -1,5 +1,11 @@
 2009-05-07  Alan McGovern  <amcgovern@novell.com>
 
+	* ItemsPresenter.cs: ItemsPresenter should be hooking itself
+	  in during the first MeasureOverride as opposed to when it's
+	  loaded. This matches the MS behaviour.
+
+2009-05-07  Alan McGovern  <amcgovern@novell.com>
+
 	* ContentPresenter.cs: I seem to have mangled that last patch
 	  before committing - fix the build.
 
